--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.63.6",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
