--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "framer-motion": "^9.0.7",
+    "i18next": "^23.2.3",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "mdb-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
